Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/static/import/StaticImport3.out
StaticImport3.java:13:9: compiler.err.cant.resolve.location.args: kindname.method, m, , , (compiler.misc.location: kindname.class, StaticImport3, null)
1 error
